[gd_scene load_steps=44 format=2]

[ext_resource path="res://characters/character.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/player/states/state_follow.gd" type="Script" id=2]
[ext_resource path="res://fsm/state_factory.tscn" type="PackedScene" id=3]
[ext_resource path="res://characters/player/states/state_idle.gd" type="Script" id=4]
[ext_resource path="res://characters/player/rules/rule_follow.gd" type="Script" id=5]
[ext_resource path="res://characters/player/player.gd" type="Script" id=6]
[ext_resource path="res://components/input_component.tscn" type="PackedScene" id=7]
[ext_resource path="res://characters/player/states/state_goto.gd" type="Script" id=8]
[ext_resource path="res://characters/player/rules/rule_goto.gd" type="Script" id=9]
[ext_resource path="res://characters/player/states/state_put.gd" type="Script" id=10]
[ext_resource path="res://characters/player/rules/pepe_rule_animation_finished.gd" type="Script" id=11]

[sub_resource type="Animation" id=17]
resource_name = "HurtDown"
length = 0.6
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 97, 98, 99 ]
}

[sub_resource type="Animation" id=16]
resource_name = "HurtLeft"
length = 0.6
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 94, 95, 96 ]
}

[sub_resource type="Animation" id=14]
resource_name = "HurtRight"
length = 0.6
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 88, 89, 90 ]
}

[sub_resource type="Animation" id=15]
resource_name = "HurtUp"
length = 0.6
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 91, 92, 93 ]
}

[sub_resource type="Animation" id=3]
resource_name = "IdleDown"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=4]
resource_name = "IdleLeft"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16, 17 ]
}

[sub_resource type="Animation" id=1]
resource_name = "IdleRight"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=5]
resource_name = "IdleUp"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=18]
resource_name = "New Anim"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 24, 29 ]
}

[sub_resource type="Animation" id=13]
resource_name = "PutDown"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 78, 79, 80, 81, 82, 83, 84, 85, 86, 87 ]
}

[sub_resource type="Animation" id=12]
resource_name = "PutLeft"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 68, 69, 70, 71, 72, 73, 74, 75, 76, 77 ]
}

[sub_resource type="Animation" id=10]
resource_name = "PutRight"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51, 52, 53, 54, 55, 56, 57 ]
}

[sub_resource type="Animation" id=11]
resource_name = "PutUp"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 58, 59, 60, 61, 62, 63, 64, 65, 66, 67 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "WalkDown"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 42, 43, 44, 45, 46, 47 ]
}

[sub_resource type="Animation" id=8]
resource_name = "WalkLeft"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39, 40, 41 ]
}

[sub_resource type="Animation" id=6]
resource_name = "WalkRight"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28, 29 ]
}

[sub_resource type="Animation" id=9]
resource_name = "WalkUp"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 30, 31, 32, 33, 34, 35 ]
}

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "IdleDown"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "IdleUp"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "IdleRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=23]
blend_point_0/node = SubResource( 19 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 20 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 21 )
blend_point_2/pos = Vector2( -1, 0 )
blend_point_3/node = SubResource( 22 )
blend_point_3/pos = Vector2( 1, 0 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "WalkDown"

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "WalkLeft"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "WalkRight"

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "WalkUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=30]
blend_point_0/node = SubResource( 26 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 27 )
blend_point_1/pos = Vector2( -1, 0 )
blend_point_2/node = SubResource( 28 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 29 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachine" id=24]
states/Idle/node = SubResource( 23 )
states/Idle/position = Vector2( 314, 108 )
states/Walk/node = SubResource( 30 )
states/Walk/position = Vector2( 505, 108 )
transitions = [ "Idle", "Walk", SubResource( 31 ), "Walk", "Idle", SubResource( 32 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=25]

[node name="Player" instance=ExtResource( 1 )]
script = ExtResource( 6 )

[node name="InputComponent" parent="." index="0" instance=ExtResource( 7 )]

[node name="AnimatedSprite" parent="." index="2"]
frame = 0

[node name="AnimationPlayer" parent="." index="3"]
anims/HurtDown = SubResource( 17 )
anims/HurtLeft = SubResource( 16 )
anims/HurtRight = SubResource( 14 )
anims/HurtUp = SubResource( 15 )
anims/IdleDown = SubResource( 3 )
anims/IdleLeft = SubResource( 4 )
anims/IdleRight = SubResource( 1 )
anims/IdleUp = SubResource( 5 )
"anims/New Anim" = SubResource( 18 )
anims/PutDown = SubResource( 13 )
anims/PutLeft = SubResource( 12 )
anims/PutRight = SubResource( 10 )
anims/PutUp = SubResource( 11 )
anims/RESET = SubResource( 2 )
anims/WalkDown = SubResource( 7 )
anims/WalkLeft = SubResource( 8 )
anims/WalkRight = SubResource( 6 )
anims/WalkUp = SubResource( 9 )

[node name="AnimationTree" parent="." index="4"]
tree_root = SubResource( 24 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 25 )
parameters/Idle/blend_position = Vector2( 0, 1 )
parameters/Walk/blend_position = Vector2( 0, 0 )

[node name="StateFactory" parent="." index="5" instance=ExtResource( 3 )]

[node name="Idle" type="Node" parent="StateFactory" index="0"]
script = ExtResource( 4 )

[node name="RuleFollow" type="Node" parent="StateFactory/Idle" index="0"]
script = ExtResource( 5 )

[node name="RuleGoto" type="Node" parent="StateFactory/Idle" index="1"]
script = ExtResource( 9 )

[node name="Follow" type="Node" parent="StateFactory" index="1"]
script = ExtResource( 2 )

[node name="RuleFollow" type="Node" parent="StateFactory/Follow" index="0"]
script = ExtResource( 5 )

[node name="RuleGoto" type="Node" parent="StateFactory/Follow" index="1"]
script = ExtResource( 9 )

[node name="GoTo" type="Node" parent="StateFactory" index="2"]
script = ExtResource( 8 )

[node name="RuleFollow" type="Node" parent="StateFactory/GoTo" index="0"]
script = ExtResource( 5 )

[node name="Put" type="Node" parent="StateFactory" index="3"]
script = ExtResource( 10 )

[node name="RuleAnimationFinished" type="Node" parent="StateFactory/Put" index="0"]
script = ExtResource( 11 )
